[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kp_detection"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida" },
]
description = "Unified Python interface for keypoint detection using OpenCV-backed algorithms."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-contrib-python",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/KeypointDetector"
"Bug Tracker" = "https://github.com/ry-yoshida-private/KeypointDetector/issues"

[tool.setuptools.packages.find]
where = ["src"]
